# web-recap

./: .env.example  LICENSE  README.md  pyproject.toml
app/: main.py
app/core/config/: settings.py
app/core/runtime/: jobs.py
app/modules/recap/application/dto/: schemas.py
app/modules/recap/application/services/: text_utils.py  workflow.py
app/modules/recap/application/services/chains/: clean_chain.py  models.py  outline_chain.py  query_chain.py
app/modules/recap/application/services/prompts/: clean.py  outline.py  query.py  section.py
app/modules/recap/domain/entities/: recap.py
app/modules/recap/domain/repositories/: recap_gateways.py
app/modules/recap/infrastructure/llm/: openai_factory.py
app/modules/recap/infrastructure/scraping/: playwright_reader.py
app/modules/recap/infrastructure/search/: brave_client.py
app/modules/recap/presentation/routes/: recap.py
frontend/: index.html
frontend/css/: styles.css
frontend/js/: config.js  script.js
frontend/locales/: en.json  fr.json
tests/: conftest.py
tests/e2e/: test_recap_api.py
tests/integration/: test_brave_client.py
tests/unit/: test_text_utils.py
