[project]
name = "web-recap"
version = "0.1.0"
description = "AI-powered web recap tool with FastAPI, LangGraph, and a static frontend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.1",
  "httpx>=0.28.1",
  "langchain>=0.3.27",
  "langchain-openai>=0.3.32",
  "langgraph>=0.6.6",
  "playwright>=1.55.0",
  "pydantic-settings>=2.10.1",
  "python-dotenv>=1.2.2",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0",
  "ruff>=0.12.4",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
